[tool.poetry]
name = "doc-comments-ai"
version = "0.1.19"
description = ""
authors = ["fynnfluegge <fynnfluegge@gmx.de>", "anshulthakur <anshulthakurjourneyendless@gmail.com>"]
readme = "README.md"
packages = [{ include = "doc_comments_ai" }]

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter-languages = "^1.10.2"
tree-sitter = "^0.21.3"
python-dotenv = "^1.1.0"
langchain = "^0.3.22"
litellm = "^1.65.0"
tiktoken = "^0.9.0"
openai = "^1.70.0"
yaspin = "^3.1.0"
inquirer = "^3.4.0"

[tool.poetry.scripts]
aicomment = "doc_comments_ai.__main__:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
